# literary-build-hatch

./: .envrc  .pdm.toml  README.md  pyproject.toml
src/literary_build_hatch/: plugin.py
