[project]
name = "literary-build-hatch"
version = "0.1.0"
description = ""
authors = [
    {name = "Angus Hollands", email = "goosey15@gmail.com"},
]
dependencies = [
    "hatchling>=0.24.0",
    "literary>=3.0.2",
    "traitlets>=5"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.entry-points.hatch]
literary = "literary_build_hatch.hooks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
